# ComfyUI

./: .gitignore  MEMORY.md  execution.py  findings.md  main.py  nodes.py  openapi.yaml  progress.md  project_session_2026_06_23.md  server.py  task_plan.md
.claude/: napkin.md
.github/workflows/: cut-release.yml
blueprints/: Text to Image (Anima Base 1.0).json
comfy/: comfy_api_env.py  model_detection.py  samplers.py  supported_models.py
comfy_api/: feature_flags.py
comfy_api_nodes/: nodes_bria.py
comfy_execution/: jobs.py
comfy_extras/: nodes_audio.py  nodes_color.py  nodes_cosmos.py  nodes_dataset.py  nodes_depth_anything_3.py  nodes_model_patch.py  nodes_stable_cascade.py  nodes_wan.py
custom_nodes/comfyui-prompt-composer/: README.md  __init__.py  _selftest.py  fields.py  nodes.py  pyproject.toml  store.py
custom_nodes/comfyui-prompt-composer/data/: presets.json
custom_nodes/comfyui-prompt-composer/web/: prompt_composer.js
custom_nodes/comfyui_civitai_ingestor/: __init__.py  civitai_api.py  downloader.py  image_cache.py  ingest.py  local_models.py  routes.py  store.py  workflow_draft.py
custom_nodes/comfyui_civitai_prompt_import/: metadata.py  nodes.py  routes.py
custom_nodes/comfyui_identity_score/: README.md  identity_core.py  nodes.py  score_identity_cli.py
custom_nodes/comfyui_image_metadata_extension/: README.md  __init__.py  pyproject.toml
custom_nodes/comfyui_prompt_library/: __init__.py  nodes.py  prompt_store.py  routes.py
custom_nodes/comfyui_random_reference_source/: __init__.py  nodes.py  (+1 more)
tests-unit/: feature_flags_test.py
(+67 files in other folders)
